# Palestinian-Cultural-Knowledge-Platform-Full-Blueprint

./: .gitignore  README.md  main.py  pyproject.toml
configs/: quality_thresholds.yaml  sources.yaml
data/: Run_ner_on_corpus.py
docs/: huggingface_publishing_guide.md
reports/seed_audit/: category_audit_report.json  recommended_seed_categories.json
scripts/: __init__.py  audit_seed_categories.py  export_to_hf.py  heritage_ner_camel.py  import_from_hf.py  publish_to_hf.py
src/: __init__.py
src/ingestion/: base_collector.py  credibility_scorer.py  deduplication.py  pipeline.py  quality_checker.py  schemas.py
src/ingestion/collectors/: __init__.py  arabic_normalizer.py  deduplication.py  wikipedia_collector.py
src/preprocessing/: __init__.py  arabic_normalizer.py
src/utils/: collection_logger.py
tests/: test_arabic_normalizer.py  test_deduplication.py  test_export_to_hf.py  test_quality_checker.py  test_schemas.py  test_wikipedia_collector.py
