[project]
name = "palestinian-cultural-knowledge-platform-full-blueprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "datasets>=5.0.0",
    "datasketch>=1.10.0",
    "ftfy>=6.3.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.19.0",
    "internetarchive>=5.9.0",
    "langdetect>=1.0.9",
    "langid>=1.1.6",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scrapy>=2.16.0",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.68.2",
    "wikipedia-api>=0.15.0",
]
